--- a/style.css
+++ b/style.css
@@ -49,12 +49,9 @@ a:hover
   position: absolute;
   top: -7px;
   left: -5px;
-
   cursor: pointer;
-
   opacity: 0; /* hide this */
   z-index: 2; /* and place it over the hamburger */
-
   -webkit-touch-callout: none;
 }
 
@@ -68,14 +65,10 @@ a:hover
   height: 4px;
   margin-bottom: 5px;
   position: relative;
-
   background:rgba(48, 48, 48, 0.6);
   border-radius: 3px;
-
   z-index: 1;
-
   transform-origin: 4px 0px;
-
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
               background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
               opacity 0.55s ease;
@@ -130,16 +123,12 @@ a:hover
   margin: -100px 0 0 -50px;
   padding: 50px;
   padding-top: 125px;
-
- background-color:rgba(254, 248, 108, 0.7);
-
+  background-color:rgba(254, 248, 108, 0.7);
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   /* to stop flickering of text in safari */
-
   transform-origin: 0% 0%;
   transform: translate(-100%, 0);
-
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
@@ -216,8 +205,8 @@ a:hover
   display: flex;
   justify-content: center;
   border: 2px solid yellowgreen;
-  width: 70%;
- float: right;
+  width: 67%;
+  float: right;
 }
 
 
@@ -228,7 +217,6 @@ a:hover
   display: flex;
   background-color: aquamarine;
   width: 100%;
-
   bottom: 0;
   left:0;
 }
@@ -249,11 +237,16 @@ a:hover
 .phytart{
 
   border: 2px solid greenyellow;
-
   width: 50%;
   margin: 10% auto;
 }
 
+.phytart p{
+
+  display: block;
+  flex-wrap: wrap;
+
+}
 .art{
 
   /* border: 2px solid red; */
@@ -262,11 +255,6 @@ a:hover
   float: right;
 }
 
-aside{
-
-  margin-top:0;
-
-}
 
 
 /*--------Page Homeopathie----------*/
@@ -278,11 +266,10 @@ aside{
 }
 
 .artHomeo{
-  display:flex;
+  /* display:flex; */
 
   border: 3px solid pink;
   overflow: hidden;
-  /* text-align: center; */
   vertical-align: middle;
   width: 85%;
   margin: 8% auto;
@@ -290,9 +277,15 @@ aside{
 
 }
 
-.artH{
 
-  float: right;
+.artHomeo p{
+  display: block;
+  flex-wrap: wrap;
+}
+
+.homeo_img{
+
+  float:left;
   width: 50%;
   height: 100%;
 
@@ -306,3 +299,46 @@ aside{
 
 
 /*--------Page home----------*/
+
+.txt{
+  display: flex;
+  border: 3px solid #badc58;
+  width: 60%;
+  height: 80%;
+  margin: auto;
+}
+
+
+/*--------Page Cosmetologie----------*/
+
+.cosmo{
+
+  text-align: center;
+}
+
+.sidebar-category{
+
+  margin-top:7%;
+  border: 2px solid #f7d794;
+  width: 15%;
+  font-size: 17px;
+
+}
+
+.title-category{
+text-align: center;
+border: 2px solid #303952;
+display: block;
+/* width: 10%; */
+
+}
+
+ul li{
+
+list-style-type: none;
+}
+
+li{
+
+text-align:start;
+}
