--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body{
   margin: 0;
   padding: 0;
@@ -18,6 +19,141 @@ body{
   z-index: 10;
 }
 
+.sous_bandeau{
+display: flex;
+height: 50px;
+justify-content: flex-end;
+background-color: #d2dae2;
+/* border: 3px solid red; */
+/* box-shadow: #2ed573; */
+width:100%;
+min-height: 20px;
+}
+
+/*--------Mon compte----------*/
+.member-container {
+   display:flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 7vh;
+  width: 17vw;
+/* border: 2px solid blue; */
+
+}
+
+.fenetre{
+  display: flex;
+  position: relative;
+  top:210px;
+  right:30px;
+  opacity:0;
+  visibility:hidden;
+  transition: 0.4s;
+  width:150vw;;
+  height: 60vh;
+  flex-wrap: wrap;
+  /* justify-content: center;
+  align-items: center; */
+  background-color: #f7f1e3;
+  border-radius: 4px;
+-webkit-box-shadow: -1px 5px 15px 5px #000000;
+box-shadow: -1px 5px 15px 5px #000000;
+z-index: 2;
+}
+
+
+button{
+  position: fixed;
+  width:10%;
+  background-color:#222f3e;
+  font-size: 24px;
+  border: none;
+  border-radius: 7px;
+  color:white;
+  padding:10px;
+  cursor: pointer;
+
+}
+button:focus + .fenetre{
+
+  opacity:1;
+  visibility:visible;
+}
+
+.fermer{
+position:absolute;
+bottom: 25px;
+right: 20px;
+font-size: 12px;
+cursor: pointer;
+font-weight: bold;
+color: #2196F3;
+}
+span:hover{
+  color:blue;
+}
+
+/*--------titre/connexion----------*/
+
+.member{
+
+  font-size: 15px;
+  border:1px solid green;
+  width:100%;
+  height: 15%;
+  text-align: center;
+
+}
+
+#form_connect{
+
+  border:1px solid orangered;
+  font-size:12px;
+  height: 30%;
+}
+
+.taille{
+
+  width:85%;
+  padding:3px;
+}
+/*--------Barre de recherche----------*/
+
+.barre{
+
+ min-height: 7vh;
+  width: 45vw;
+  /* border: 2px solid yellow; */
+  margin-right: 2%;
+  display: block;
+  flex-wrap: wrap;
+  margin-top:3px;
+
+}
+
+label {
+    display: block;
+    font: 1rem 'Fira Sans', sans-serif;
+}
+
+input,
+label {
+    margin: .4rem 0;
+}
+
+.note {
+    font-size: .8em;
+}
+.site-search{
+  width:20px;
+}
+
+.recherche{
+
+  width:15vw;
+}
+
+/*--------Menu-hamburger----------*/
 
 .navigation {
   position: absolute;
@@ -28,7 +164,7 @@ body{
   z-index: 20; */
 }
 
-/*--------Menu-hamburger----------*/
+
 a
 {
   text-decoration: none;
@@ -300,7 +436,7 @@ a:hover
 
   float:left;
   width: 50%;
- 
+
 
 }
 
