--- a/admin_style.css
+++ b/admin_style.css
@@ -8,9 +8,10 @@ body {
 
 .conteneur{
   display: flex;
+  /* flex-direction: column; */
 }
 /*--------Sidebars----------*/
-p {
+.hi {
     font-family: 'Poppins', sans-serif;
     font-size: 1.1em;
     font-weight: 300;
@@ -120,7 +121,7 @@ a[data-toggle="collapse"] {
 .admin_name{
 
   border-bottom:2px solid grey;
-  width: 90%;
+  width: 100%;
   height: 60px;
   justify-content: flex-end;
 }
@@ -131,3 +132,81 @@ padding-top:5px;
 font-size: 30px;
 margin-left:5px;
 }
+
+
+/*--------Spaces----------*/
+
+.conteneur_deux{
+    display: flex;
+    flex-direction: column;
+    width:100%;
+}
+.acces_spaces{
+    display:flex;
+    border: 5px solid darkslategray;
+    width: 60%;
+    height: 40%;
+    margin: 140px 200px 50px auto;/*-haut:droit;bas;gauche-*/
+    flex-wrap: wrap;
+   text-align: center;
+   border-radius: 4px;
+   border-style: outset;
+
+
+
+        }
+
+.space_produits{
+
+border-bottom: 2px solid darkslategray;
+width: 50%;
+ margin-top:25px;
+height: 40%;
+
+}
+
+
+.space_categories{
+
+border-bottom: 2px solid darkslategray;
+width: 50%;
+margin-top:25px;
+height: 40%;
+}
+
+.space_commandes{
+
+/* border: 1px solid green; */
+width: 50%;
+margin-top:25px;
+height: 50%;
+}
+
+
+.space_users{
+/* border: 1px solid purple; */
+width: 50%;
+margin-top:25px;
+height: 50%;
+
+}
+
+a:hover{
+
+    text-decoration: none;
+}
+
+#addprod{
+    width: 50%;
+    margin-left: 2%;
+    margin-top: 3%;
+
+}
+
+#table_prod{
+
+    margin-top: 10%;
+    margin-left: 50%;
+}
+
+
