--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
 
 /*--------Bandeau/navbar----------*/
 .bandeau{
+  display: flex;
   border: 2px solid #2ed573;
   text-align: center;
   background-color: #78e08f;
@@ -17,8 +18,25 @@ body{
   font-family: 'Srisakdi', cursive;
   min-height: 40px;
   z-index: 10;
+
 }
 
+.nom{
+  /* border: 2px solid red; */
+  width: 50%;
+  margin: 10px 70px 0 230px;
+
+}
+.logo{
+
+  background-image: url("img/Logo-Pharmacie.png");
+  background-repeat: no-repeat;
+  /* border:2px solid grey; */
+  height: 70px;
+  width: 88px;
+  margin-left: 8px;
+
+}
 .sous_bandeau{
 display: flex;
 height: 50px;
@@ -81,7 +99,7 @@ z-index: 2;
   padding:1px;
   cursor: pointer;
   /* height: 100%; */
- 
+
 
 
 }
@@ -160,7 +178,7 @@ text-decoration:none;
  min-height: 7vh;
   width: 45vw;
   /* border: 2px solid yellow; */
-  margin-right: 2%;
+  /* margin-right: 2%; */
   display: block;
   flex-wrap: wrap;
   margin-top:3px;
@@ -183,11 +201,16 @@ label {
 }
 .site-search{
   width:20px;
+
 }
 
 .recherche{
 
-  width:15vw;
+  width:3vw;
+  background-color: #222f3e;
+  margin-top:2px;
+  font-size: 24px;
+  border:none;
 
 }
 
@@ -206,14 +229,14 @@ label {
 a
 {
   text-decoration: none;
-  color: #232323;
+  color: white;
 
   transition: color 0.3s ease;
 }
 
 a:hover
 {
-  color: darkgreen;
+  color: white;
 }
 
 #menuToggle
@@ -311,8 +334,8 @@ a:hover
   margin: -100px 0 0 -50px;
   padding: 50px;
   padding-top: 120px;
-  margin-top: 60px;
-  background-color:rgba(47, 79, 79, 0.8);
+  margin-top: 74px;
+  background-color:rgba(189, 195, 199, 0.8);
   list-style-type: none;
   transform-origin: 0% 0%;
   transform: translate(-100%, 0);
@@ -321,7 +344,7 @@ a:hover
 
 #menu li
 {
-  padding: 10px 0;
+  padding: 7px 0;
   font-size: 22px;
 }
 
@@ -406,13 +429,42 @@ a:hover
 background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
 color:white;
   width: 100%;
-  height:50%;
+  height:70%;
   bottom: 0;
   left:0;
+
 }
 
 
 
+.contact_foot{
+
+  border-left: 2px solid white;
+  width: 15%;
+  text-align: center;
+  margin-left: 230px;
+
+
+}
+
+.contact_footer{
+  /* border: 2px solid pink; */
+  /* text-align: center; */
+  width:20%;
+  margin-left: 15px;
+
+}
+
+.horaires_footer{
+/* border: 2px solid purple; */
+ margin-left: 70px;
+/* text-align: center; */
+}
+
+.margin_top{
+
+  margin-top:5px;
+}
 /*--------Page Phytothérapie----------*/
 
 .title{
@@ -481,13 +533,34 @@ color:white;
 
 }
 
-.homeoprod{
+.homeoprod_parts{
+  display: flex;
 
   border: 2px solid blue;
   margin-top: 10%;
 }
 
 
+#specifiques{
+  border:2px solid yellow;
+}
+
+#quotidiens{
+  border:2px solid red;
+}
+
+th,td,tr{
+  border:1px solid grey;
+}
+
+.ligne_une{
+background-color: #55efc4;
+}
+
+.ligne_deux{
+
+background-color: #81ecec;
+}
 /*--------Page home----------*/
 
 .txt{
@@ -502,10 +575,10 @@ color:white;
 /*--------Page Cosmetologie----------*/
 
 .cosmo{
-
+  margin-top:18px;
   text-align: center;
 }
-
+/*
 .sidebar-category{
 
   margin-top:7%;
@@ -520,7 +593,7 @@ text-align: center;
 border: 2px solid #303952;
 display: block;
 /* width: 10%; */
-
+/*
 }
 
 ul li{
@@ -531,4 +604,15 @@ list-style-type: none;
 ul{
 
 padding:0;
+} */
+
+.navbar_cosmeto{
+
+  border:4px solid rgb(43, 187, 173);
+  border-radius:15px;
+  width: 38%;
+  background-color: rgb(43, 187, 173);
+  margin: 0 auto;
+  color:white;
+  margin-top:30px;
 }
