--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 
 body{
-  margin: 0;
+  margin:0;
   padding: 0;
   max-width: 100%;
 }
-
 
 
 /*--------Bandeau/navbar----------*/
@@ -90,7 +89,7 @@ z-index: 2;
 .compte{
   /* position: fixed; */
   position:absolute;
-  width:200px;
+  width:160px;
   background-color:#222f3e;
   font-size: 20px;
   border: none;
@@ -275,7 +274,7 @@ a:hover
   height: 4px;
   margin-bottom: 5px;
   position: relative;
-  background:rgba(48, 48, 48, 0.6);
+  background:rgba(	34, 47, 62, 0.8);
   border-radius: 3px;
   z-index: 1;
   transform-origin: 4px 0px;
@@ -302,7 +301,7 @@ a:hover
 {
   opacity: 1;
   transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323;
+  background: #222f3e;
 }
 
 /*
@@ -585,13 +584,43 @@ background-color: #f8a5c2;
 
 .txt{
   display: flex;
-  border: 3px solid #badc58;
+  border: 5px solid #78e08f;
   width: 60%;
   height: 80%;
   margin: auto;
+
+}
+
+.txtpresent{
+
+  /* border: 2px solid red; */
+}
+
+.utiles{
+  display: flex;
+  border:3px solid #222f3e;
+  border-radius: 3px;
+  width: 100%;
+  height: 80%;
+  justify-content: center;
+  background-image: url("img/banderole.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-top:none;
+
+
+
+
 }
 
 
+.text_utiles{
+
+  /* border:1px solid palevioletred; */
+color:#1e272e;
+z-index: 5;
+margin-left:30px;
+}
 /*--------Page Cosmetologie----------*/
 
 .cosmo{
@@ -647,11 +676,12 @@ padding:0;
 .conteneur_inscription{
   display:flex;
   flex-direction: column;
-  border:2px solid black;
+  border:4px solid #00b894;
+  border-style:outset;
   height:700px;
   width:850px;
   margin-top: 150px;
-  margin-left:320px;
+  margin-left:250px;
   align-items: center;
 }
 
@@ -724,8 +754,32 @@ margin-left:15px;
   color:white;
   border-radius:3px;
   margin-left: 340px;
-  margin-top: 20px;
-  background-color: #78e08f;
+  margin-top: 25px;
+  background-color: #55efc4;
   font-size:25px;
+
+}
+
+
+/*--------Page Services----------*/
+
+.services{
+
+border:2px solid purple;
+}
+
+.infirmieres{
+
+border: 2px solid palegreen;
+}
+
+.medecins{
+border: 2px solid pink;
+
+}
+
+.specialistes{
+
+border: 2px solid palevioletred;
 
 }
