--- a/style.css
+++ b/style.css
@@ -398,7 +398,7 @@ a:hover {
     height: 300px;
     margin: auto 0;
     position: relative;
-  
+
 }
 
 .map {
@@ -697,6 +697,8 @@ th {
 
 .services {
     border: 2px solid purple;
+    display: flex;
+    flex-direction: column;
 }
 
 .infirmieres {
@@ -711,7 +713,29 @@ th {
     border: 2px solid palevioletred;
 }
 
+.informations_utiles{
+    text-align: center;
 
+}
+.autres{
+    border: 2px solid rgb(0, 255, 179);
+    background-color: #7bed9f;
+    width:30%;
+    color:darkslategray;
+    border-radius:36%;
+    margin:0 auto;
+
+
+}
+
+.carte {
+    border: 2px solid lightskyblue;
+    background-image: url("img/carte.png");
+    width:600px;
+    height:400px;
+    margin:0 auto;
+    margin-top:10px;
+}
 /*--------Page Ortho----------*/
 
 .ortho {
@@ -759,6 +783,23 @@ th {
     box-shadow: 0px 10px 13px -7px #2ff086, -3px 5px 15px 5px rgba(141, 255, 169, 0);
 }
 
+.renseignements{
+    text-align: center;
+    margin-top:7px;
+    font-size:20px;
+    color:#222f3e;
+
+}
+a#renseignements{
+text-decoration: none;
+    color:#222f3e;
+    font-weight:bold;
+}
+
+a#renseignements:hover{
+    color:#222f3e;
+    text-decoration: none;
+}
 .hygiene {
     border: 2px solid palegreen;
     background-image: url("img/hygiene.jpg");
@@ -790,7 +831,7 @@ th {
 .tooltip {
   position: relative;
   display: inline-block;
-  border-bottom: 1px dotted black;
+  
 }
 
 .tooltip .tooltiptext {
@@ -841,4 +882,60 @@ th {
 .recherche{
         display:none;
     }
+}
+
+/*--------Page Univers bébé----------*/
+
+.univ_bebe{
+    display:flex;
+    border:4px solid darkslategray;
+    margin-top:50px;
+    flex-direction: column;
+    border-radius:2%;
+    background-color:#f1f2f6;
+
+}
+
+.univ_mom{
+
+    border:4px solid darkslategray;
+    margin-top:40px;
+    border-radius:2%;
+    background-color:#f1f2f6;
+}
+
+.babe_title{
+    text-align:center;
+    margin-top:20px;
+}
+.img_bebe{
+    background-image: url("img/bebe.jpg");
+    width:334px;
+    height:223px;
+    border:2px solid darkslategray;
+    margin-left:70%;
+    border-radius:50%;
+    border-style:outset;
+
+}
+
+.img_mom{
+    background-image: url("img/maman.jpg");
+    width:334px;
+    height:223px;
+    border:2px solid darkslategray;
+    margin-left:70%;
+    border-radius:50%;
+    border-style:outset;
+}
+.sous-titre{
+    margin-left:15px;
+}
+.mom_text{
+    margin-left:5px;
+}
+
+.titre{
+    margin-top:20px;
+    margin-left:5%;
 }
