--- a/style.css
+++ b/style.css
@@ -831,7 +831,7 @@ a#renseignements:hover{
 .tooltip {
   position: relative;
   display: inline-block;
-  
+
 }
 
 .tooltip .tooltiptext {
@@ -866,9 +866,9 @@ a#renseignements:hover{
 /* media query */
 /* nav */
 @media all and (max-width: 700px){
-.barre{
+/* .barre{
     /* margin-right: 40%; */
-}
+/* } */ 
 #site-search {
     width: 140px;
 }
