--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
     min-height: 7vh;
     width: 17vw;
     position: relative;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
 
 }
 
@@ -182,7 +182,7 @@ a.inscription_btn {
 .barre {
     min-height: 7vh;
     width: 270px;
-    border: 2px solid yellow;
+    /* border: 2px solid yellow; */
     display: block;
     flex-wrap: wrap;
     margin-top: 3px;
@@ -213,7 +213,7 @@ label {
     background-color: #222f3e;
     margin-top: 2px;
     font-size: 24px;
-    border:1px solid red;
+    /* border:1px solid red; */
     position: absolute;
     /* right: 320px; */
 
@@ -868,7 +868,7 @@ a#renseignements:hover{
 @media all and (max-width: 700px){
 /* .barre{
     /* margin-right: 40%; */
-/* } */ 
+/* } */
 #site-search {
     width: 140px;
 }
