--- a/admin_style.css
+++ b/admin_style.css
@@ -146,9 +146,9 @@ ul ul a {
     width: 30%;
     margin-top: 25px;
     height: 50%;
-    border: 2px solid #eb3b5a;
+    border: 2px solid #78e08f;
     border-radius: 70%;
-    background-color: #eb3b5a;
+    background-color: #78e08f;
     margin-right: 10%;
     margin-left: 17%;
 }
@@ -158,9 +158,9 @@ ul ul a {
     width: 30%;
     margin-top: 25px;
     height: 50%;
-    border: 2px solid #eb3b5a;
+    border: 2px solid #78e08f;
     border-radius: 50%;
-    background-color: #eb3b5a;
+    background-color: #78e08f;
 }
 
 .space_professionnels {
@@ -168,9 +168,9 @@ ul ul a {
     width: 30%;
     margin-top: 25px;
     height: 50%;
-    border: 2px solid #eb3b5a;
+    border: 2px solid #78e08f;
     border-radius: 50%;
-    background-color: #eb3b5a;
+    background-color: #78e08f;
     margin-right: 10%;
     margin-left: 17%;
 }
@@ -180,18 +180,18 @@ ul ul a {
     width: 30%;
     margin-top: 25px;
     height: 50%;
-    border: 2px solid #eb3b5a;
+    border: 2px solid #78e08f;
     border-radius: 50%;
-    background-color: #eb3b5a;
+    background-color: #78e08f;
 }
 
 h3 {
-    text-decoration: none;
-    color: white;
+    text-decoration: none !important;
+    color: white !important;
 }
 
 h3:hover {
-    text-decoration:none;
+    text-decoration :none !important;
     color: white;
 }
 
@@ -218,10 +218,10 @@ h3:hover {
 /*--------Admin_add_produit----------*/
 
 .add_prod {
-    border: 1px solid dimgray;
+    border: 3px solid dimgray;
     padding: 2%;
-    width: 30%;
-    margin-left: 35%;
+    width: 100%;
+    margin-left: 65%;
     margin-top: 2%;
 }
 
@@ -260,10 +260,10 @@ h3:hover {
 /*--------Admin_addpro----------*/
 
 .add_pro {
-    border: 1px solid pink;
+    border: 3px solid pink;
     padding: 2%;
-    width: 30%;
-    margin-left: 35%;
+    width: 100%;
+    margin-left: 65%;
     margin-top: 2%;
 }
 
@@ -297,7 +297,8 @@ h3:hover {
 .add_cat {
     border: 1px solid orange;
     margin-top: 5%;
-    width: 30%;
+    width: 100%;
+    height:60%;
     padding: 3%;
-    margin-left: 33%;
+    margin-left: 60%;
 }
